Aexpr timeline_ Fix tooltip style
SQUASHED: AUTO-COMMIT-src-components-draft-event-drops.css,AUTO-COMMIT-src-components-draft-event-drops.js,

--- a/src/components/draft/event-drops.css
+++ b/src/components/draft/event-drops.css
@@ -98,7 +98,7 @@ footer p {
     right: 1.65rem;
 }
 
-.tooltip .commit {
+.tooltip .event {
     position: relative;
     z-index: 2;
     display: flex;
